@@ -18,7 +18,6 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.annotation.Nullable;
@@ -138,7 +137,7 @@ public final class InboundMappingProcessor
                         (msg, header) -> msg.withHeader(header.getKey(), header.getValue()));
         return mappingTimer.overall(() -> mappers.stream()
                 .flatMap(mapper -> runMapper(mapper, externalMessageWithTraceContext, mappingTimer))
-                .collect(Collectors.toList())
+                .toList()
         );
     }
 
@@ -227,8 +226,8 @@ public final class InboundMappingProcessor
                         e)
         );
 
-        if (error instanceof WithDittoHeaders) {
-            final DittoHeaders existingHeaders = ((WithDittoHeaders) error).getDittoHeaders();
+        if (error instanceof WithDittoHeaders withDittoHeaders) {
+            final DittoHeaders existingHeaders = withDittoHeaders.getDittoHeaders();
             final DittoHeaders mergedHeaders = bestEffortHeaders.toBuilder().putHeaders(existingHeaders)
                     .build();
             return dittoRuntimeException.setDittoHeaders(mergedHeaders);
